ops/cluster/dev/servicea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
  labels: { app: servicea }
spec:
  replicas: 1
  selector:
    matchLabels: { app: servicea }
  template:
    metadata:
      labels: { app: servicea }
    spec:
      serviceAccountName: dev
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: servicea
          image: ghcr.io/daniel-iwaniec/servicea:1.0.2
          imagePullPolicy: IfNotPresent
          resources:
            requests: { memory: "100Mi", cpu: "100m" }
            limits: { memory: "250Mi", cpu: "200m" }
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /app
              name: volume
      volumes:
        - name: volume
          hostPath: { path: /app/servicea }
---
apiVersion: v1
kind: Service
metadata:
  name: servicea
  labels: { app: servicea }
spec:
  type: ClusterIP
  selector: { app: servicea }
  ports:
    - name: web
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicea-ingress
spec:
  tls:
    - hosts:
        - servicea.esploro.lan
      secretName: tls-secret
  rules:
    - host: servicea.esploro.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicea
                port:
                  number: 80
