ops/cluster/dev/serviceb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
  labels: { app: serviceb }
spec:
  replicas: 1
  selector:
    matchLabels: { app: serviceb }
  template:
    metadata:
      labels: { app: serviceb }
    spec:
      serviceAccountName: dev
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: serviceb
          image: ghcr.io/daniel-iwaniec/serviceb:1.0.3
          imagePullPolicy: IfNotPresent
          resources:
            requests: { memory: "500Mi", cpu: "500m" }
            limits: { memory: "1000Mi", cpu: "1000m" }
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /app
              name: volume
      volumes:
        - name: volume
          hostPath: { path: /app/serviceb }
---
apiVersion: v1
kind: Service
metadata:
  name: serviceb
  labels: { app: serviceb }
spec:
  type: ClusterIP
  selector: { app: serviceb }
  ports:
    - name: web
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serviceb-ingress
spec:
  tls:
    - hosts:
        - serviceb.esploro.lan
      secretName: tls-secret
  rules:
    - host: serviceb.esploro.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serviceb
                port:
                  number: 80
