ops/cluster/dev/servicee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicee
  labels: { app: servicee }
spec:
  replicas: 1
  selector:
    matchLabels: { app: servicee }
  template:
    metadata:
      labels: { app: servicee }
    spec:
      serviceAccountName: dev
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: servicee
          image: ghcr.io/daniel-iwaniec/servicee:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests: { memory: "100Mi", cpu: "100m" }
            limits: { memory: "500Mi", cpu: "500m" }
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /app
              name: volume
      volumes:
        - name: volume
          hostPath: { path: /app/servicee/build/libs }
---
apiVersion: v1
kind: Service
metadata:
  name: servicee
  labels: { app: servicee }
spec:
  type: ClusterIP
  selector: { app: servicee }
  ports:
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicee-ingress
spec:
  tls:
    - hosts:
        - servicee.esploro.lan
      secretName: tls-secret
  rules:
    - host: servicee.esploro.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicee
                port:
                  number: 80
